--- a/requirements.txt
+++ b/requirements.txt
@@ -9,7 +9,7 @@ bs4
 git+https://github.com/Joelkb/cinemagoer
 datetime
 pytz
-aiohttp
+aiohttp==3.8.1
 
 #---master---#
 #Telethroid==0.0.10
@@ -38,5 +38,6 @@ wheel
 ujson
 wget
 dnspython==2.3.0
-
+Flask==2.2.2
+gunicorn==20.1.0
 
